<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_basic</name>
  <version>0.0.1</version>
  <description>Short description of your package</description>
  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">nhg</maintainer>
  <license>Apache License 2.0</license>

  <!-- Declare the build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Declare the dependencies for your C++ node -->
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

